--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div>
 			<div class="warp-footer-btns">
 				<div class="release-btn">
-					<a href="javascript:void(0)">发布</a>
+					<a href="javascript:void(0)">骂！</a>
 				</div>
 			</div>
 		</div>
